tests/ui/env-suffix.stderr
error: expected string literal
 --> $DIR/tests/ui/env-suffix.rs:4:15
  |
4 |     fn [<env!("VAR"suffix)>]() {}
  |               ^^^^^^^^^^^
